# time-wise-rat

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/raw/: btc.csv  flu.csv  sp_500.csv  weather.csv
ipynb/: EDA.ipynb
time_wise_rat/: config.py  datasets.py  models.py  prepare_data.py  train.py  utils.py
time_wise_rat/augmentations/: __init__.py  baseline.py  mqretnn.py  ratsf.py  tera.py
time_wise_rat/configs/: __init__.py  augmentation_config.py  data_config.py  experiment_config.py  model_config.py  train_config.py
time_wise_rat/data/: __init__.py  datasets.py  prepare_data.py  preprocessors.py  utils.py
time_wise_rat/models/: __init__.py  autoformer.py  base.py  fedformer.py  models.py  nstransformer.py  patch_tst.py  patchtst.py
